--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.1.1",
     "npm": "^5.7.1",
     "nuxt": "^1.4.0"
   },
